kubernetes/charts/testing/traefik_v3.0.4/dashhboard/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: traefik-v3
spec:
  basicAuth:
    secret: traefik-dashboard-auth
